--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@actions/exec": "1.0.1",
     "@actions/io": "1.0.1",
     "argument-vector": "1.0.2",
-    "cache": "github:cypress-io/github-actions-cache#8bec6cc",
+    "cache": "1.1.2",
     "execa": "3.3.0",
     "got": "9.6.0",
     "hasha": "5.1.0",
